--- a/OnSSET_SDK.ipynb
+++ b/OnSSET_SDK.ipynb
@@ -81,6 +81,7 @@
         "from tqdm.notebook import tqdm\n",
         "import glob\n",
         "from google.colab import output\n",
+        "import time\n",
         "\n",
         "print('Setup complete')"
       ]
@@ -98,8 +99,8 @@
         "# @markdown and elevation data (DEM) at different resolutions.\n",
         "# @markdown You will need a username and a password from NASA Earth Data, please go to\n",
         "# @markdown https://urs.earthdata.nasa.gov/home create a free account and fill the login credentials below.\n",
-        "NASA_username = \"\" # @param {\"type\":\"string\",\"placeholder\":\"👤 Enter NASA Earth username\"}\n",
-        "NASA_password = \"\" # @param {\"type\":\"string\",\"placeholder\":\"🔒 Enter NASA Earth password\"}\n",
+        "NASA_username = \"camilorg@kth.se\" # @param {\"type\":\"string\",\"placeholder\":\"👤 Enter NASA Earth username\"}\n",
+        "NASA_password = \"p**5aQiq2q@$FR#\" # @param {\"type\":\"string\",\"placeholder\":\"🔒 Enter NASA Earth password\"}\n",
         "\n",
         "## @markdown ### OpenTopography database\n",
         "## @markdown Digital Elevation Model data (DEM) can be downloaded from the OpenTopography\n",
@@ -141,7 +142,7 @@
         "\n",
         "display(HTML(''' '''))\n",
         "\n",
-        "Country = \"ETH\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
+        "Country = \"BEN\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
         "# @markdown Choose the datasets to download in the optios below:\n",
         "\n",
         "box_layout = widgets.Layout(height='auto',\n",
@@ -162,12 +163,28 @@
         "    indent=False                             # Align with other controls with a description\n",
         ")\n",
         "\n",
+        "specs_description = widgets.HTML('Socio-economic specifications define the financial and ' +\n",
+        "                                 'behavioral parameters of the target population. This includes ' +\n",
+        "                                 'estimated household energy consumption tiers, affordability ' +\n",
+        "                                 '(willingness to pay), and projected GDP growth. These values ' +\n",
+        "                                 'are used to calculate the long-term economic viability and ' +\n",
+        "                                 'expected revenue for grid investments.', layout=Layout(width='700px'))\n",
+        "\n",
+        "\n",
+        "specs_box = VBox([specs_checkbox, specs_description])\n",
+        "\n",
         "pop_checkbox = widgets.Checkbox(\n",
         "    description='Population count', # Label\n",
         "    value=False,                            # Default value\n",
         "    disabled=False,                         # Whether to disable user changes\n",
         "    indent=False                             # Align with other controls with a description\n",
         ")\n",
+        "\n",
+        "pop_description = widgets.HTML('Population count data provides the spatial distribution of ' +\n",
+        "                               'inhabitants. This is critical for estimating electricity demand ' +\n",
+        "                               'and identifying clusters for potential microgrid or grid ' +\n",
+        "                               'extension projects.', layout=Layout(width='700px'))\n",
+        "\n",
         "\n",
         "pop_dropdown = widgets.Dropdown(\n",
         "    description='Dataset',\n",
@@ -181,7 +198,7 @@
         "    disabled=True\n",
         ")\n",
         "\n",
-        "pop_box = VBox([pop_checkbox, HBox([pop_dropdown, pop_radio])])\n",
+        "pop_box = VBox([pop_checkbox, pop_description, HBox([pop_dropdown, pop_radio])])\n",
         "\n",
         "mv_checkbox = widgets.Checkbox(\n",
         "    description='Medium voltage lines', # Label\n",
@@ -190,13 +207,18 @@
         "    indent=False                             # Align with other controls with a description\n",
         ")\n",
         "\n",
+        "mv_description = widgets.HTML('Medium voltage (MV) infrastructure data represents the existing ' +\n",
+        "                              'power grid. Knowing the location of current lines allows the model ' +\n",
+        "                              'to calculate the shortest and most cost-effective connection ' +\n",
+        "                              'points for unelectrified areas.', layout=Layout(width='700px'))\n",
+        "\n",
         "mv_dropdown = widgets.Dropdown(\n",
         "    description='Dataset',\n",
         "    options=['GridFinder'], # 'energydata.info'\n",
         "    disabled=True\n",
         ")\n",
         "\n",
-        "mv_box = VBox([mv_checkbox, HBox([mv_dropdown])])\n",
+        "mv_box = VBox([mv_checkbox, mv_description, HBox([mv_dropdown])])\n",
         "\n",
         "wind_checkbox = widgets.Checkbox(\n",
         "    description='Wind speed', # Label\n",
@@ -204,6 +226,11 @@
         "    disabled=False,                         # Whether to disable user changes\n",
         "    indent=False                             # Align with other controls with a description\n",
         ")\n",
+        "\n",
+        "wind_description = widgets.HTML('Wind speed data at various heights (hub heights) is used to ' +\n",
+        "                                'assess the technical potential for wind energy generation. ' +\n",
+        "                                'Higher resolution data helps pinpoint areas where turbines ' +\n",
+        "                                'will be most productive.', layout=Layout(width='700px'))\n",
         "\n",
         "wind_dropdown = widgets.Dropdown(\n",
         "    description='Dataset',\n",
@@ -217,7 +244,7 @@
         "    disabled=True\n",
         ")\n",
         "\n",
-        "wind_box = VBox([wind_checkbox, HBox([wind_dropdown, wind_radio])])\n",
+        "wind_box = VBox([wind_checkbox, wind_description, HBox([wind_dropdown, wind_radio])])\n",
         "\n",
         "solar_checkbox = widgets.Checkbox(\n",
         "    description='Solar irradiation', # Label\n",
@@ -226,13 +253,18 @@
         "    indent=False                             # Align with other controls with a description\n",
         ")\n",
         "\n",
+        "solar_description = widgets.HTML('Solar irradiation (GHI) data measures the energy received ' +\n",
+        "                                 'from the sun. This is the primary input for determining ' +\n",
+        "                                 'the feasibility and sizing of solar photovoltaic (PV) ' +\n",
+        "                                 'installations.', layout=Layout(width='700px'))\n",
+        "\n",
         "solar_dropdown = widgets.Dropdown(\n",
         "    description='Dataset',\n",
         "    options=['Global Solar Atlas'],\n",
         "    disabled=True\n",
         ")\n",
         "\n",
-        "solar_box = VBox([solar_checkbox, HBox([solar_dropdown])])\n",
+        "solar_box = VBox([solar_checkbox, solar_description, HBox([solar_dropdown])])\n",
         "\n",
         "dem_checkbox = widgets.Checkbox(\n",
         "    description='Elevation model', # Label\n",
@@ -284,13 +316,18 @@
         "    indent=False                             # Align with other controls with a description\n",
         ")\n",
         "\n",
+        "ntl_description = widgets.HTML('Nighttime light (NTL) intensity is used as a proxy for ' +\n",
+        "                               'existing electrification and economic activity. It helps ' +\n",
+        "                               'validate population data and identifies areas that are ' +\n",
+        "                               'likely already connected to the grid.', layout=Layout(width='700px'))\n",
+        "\n",
         "ntl_dropdown = widgets.Dropdown(\n",
         "    description='Dataset',\n",
         "    options=['WorldPop covariates derived from VNL 2.1/2.2'],\n",
         "    disabled=True\n",
         ")\n",
         "\n",
-        "ntl_box = VBox([ntl_checkbox, HBox([ntl_dropdown])])\n",
+        "ntl_box = VBox([ntl_checkbox, ntl_description, HBox([ntl_dropdown])])\n",
         "\n",
         "roads_checkbox = widgets.Checkbox(\n",
         "    description='Roads', # Label\n",
@@ -298,6 +335,11 @@
         "    disabled=False,                         # Whether to disable user changes\n",
         "    indent=False                             # Align with other controls with a description\n",
         ")\n",
+        "\n",
+        "roads_description = widgets.HTML('Road network data is a key proxy for accessibility. ' +\n",
+        "                                 'Proximity to roads significantly reduces the logistical ' +\n",
+        "                                 'costs of transporting equipment and maintaining power ' +\n",
+        "                                 'infrastructure.', layout=Layout(width='700px'))\n",
         "\n",
         "roads_dropdown = widgets.Dropdown(\n",
         "    description='Dataset',\n",
@@ -313,7 +355,7 @@
         "    disabled=True\n",
         ")\n",
         "\n",
-        "roads_box = VBox([roads_checkbox, HBox([roads_dropdown])]) # , roads_types])])\n",
+        "roads_box = VBox([roads_checkbox, roads_description, HBox([roads_dropdown])]) # , roads_types])])\n",
         "\n",
         "download = Button(description='Get data',\n",
         "                  icon= 'download',\n",
@@ -401,6 +443,11 @@
         "    print('Please select a country')\n",
         "    return\n",
         "\n",
+        "  download.disabled = True              # Prevent double-clicks\n",
+        "  download.description = ' Fetching...' # Change text\n",
+        "  download.icon = 'spinner'             # Set to spinner icon\n",
+        "  download.button_style = 'warning'     # Change color to yellow/orange\n",
+        "\n",
         "  total_downloads = 1 # for boundaries\n",
         "\n",
         "  if specs_checkbox.value:\n",
@@ -468,6 +515,17 @@
         "      pbar.set_description(\"🔄 Downloading roads data\")\n",
         "    print('\\n\\033[1m✅ Data downloaded succesfully to session 🎉\\033[0m')\n",
         "\n",
+        "  download.icon = 'check'               # Change to checkmark\n",
+        "  download.description = ' Data Ready'\n",
+        "  download.button_style = 'success'     # Change color to green\n",
+        "\n",
+        "  time.sleep(3)\n",
+        "\n",
+        "  download.description = 'Get Data'\n",
+        "  download.icon = 'download'\n",
+        "  download.button_style = 'primary'\n",
+        "  download.disabled = False             # Re-enable if you want them to download again\n",
+        "\n",
         "hr = widgets.HTML(value=\"<hr>\")\n",
         "space = widgets.HTML(value=\"<br>\")\n",
         "\n",
@@ -482,7 +540,7 @@
         "roads_checkbox.observe(on_roads_checkbox_changed, names='value')\n",
         "download.on_click(on_download_clicked)\n",
         "\n",
-        "display(VBox([all_checkbox, hr, specs_checkbox, hr, pop_box, hr, mv_box, hr, wind_box, hr,\n",
+        "display(VBox([all_checkbox, hr, specs_box, hr, pop_box, hr, mv_box, hr, wind_box, hr,\n",
         "                solar_box, hr, dem_box, hr, land_box, hr, ntl_box, hr, roads_box,\n",
         "                space, download], layout=box_layout))\n"
       ],
