--- a/OnSSET_SDK.ipynb
+++ b/OnSSET_SDK.ipynb
@@ -40,21 +40,9 @@
       "execution_count": null,
       "metadata": {
         "collapsed": true,
-        "id": "ybz0U1fqgOP9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ce6034f2-341a-488d-ca3d-d63eaf982077"
+        "id": "ybz0U1fqgOP9"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Running command git clone --filter=blob:none --quiet https://github.com/ClimateCompatibleGrowth/Starter-Data-Kits.git /tmp/pip-req-build-jnbqns5k\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#%%capture\n",
         "# @title # 📦 Import required packages {\"vertical-output\":true,\"display-mode\":\"form\"}\n",
@@ -128,10 +116,10 @@
         "# @markdown displayed of posible datasets to download. Select which datasets and sources\n",
         "# @markdown you want to use and click on the `Get data` button.\n",
         "\n",
-        "display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
+        "fa_loader = HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> ''')\n",
         "\n",
         "# FIX SCROLLBAR: This tells Colab to expand the output area\n",
-        "output.eval_js('google.colab.output.setIframeHeight(0, true, {maxHeight: 2000})')\n",
+        "output.eval_js('google.colab.output.setIframeHeight(0, true, {maxHeight: 3000})')\n",
         "\n",
         "font_style = widgets.HTML(\"\"\"\n",
         "<style>\n",
@@ -172,19 +160,53 @@
         "    .jupyter-button i {\n",
         "        margin-right: 8px;\n",
         "    }\n",
+        "    /* Card Container */\n",
         "    .dataset-card {\n",
         "        background-color: #ffffff;\n",
         "        border: 1px solid #dadce0;\n",
-        "        border-radius: 8px;\n",
-        "        padding: 15px;\n",
-        "        margin-bottom: 10px;\n",
-        "        box-shadow: 0 1px 2px 0 rgba(60,64,67,.3);\n",
+        "        border-radius: 12px;\n",
+        "        padding: 18px;\n",
+        "        margin: 10px 0px;\n",
+        "        box-shadow: 0 2px 4px rgba(0,0,0,0.08);\n",
+        "    }\n",
+        "\n",
+        "    /* Category Headers */\n",
+        "    .category-header {\n",
+        "        color: #1a73e8;\n",
+        "        font-family: 'Segoe UI', Roboto, sans-serif;\n",
+        "        margin-top: 20px;\n",
+        "        border-bottom: 2px solid #e8f0fe;\n",
+        "        padding-bottom: 5px;\n",
+        "    }\n",
+        "\n",
+        "    /* Existing styles ... */\n",
+        "    .widget-checkbox > label > span { font-size: 16px !important; font-weight: 600 !important; }\n",
+        "    .fa-spinner { animation: spin 2s linear infinite; }\n",
+        "    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }\n",
+        "    /* Style the Accordion Header */\n",
+        "    .jupyter-widgets.p-Accordion-child > .p-Collapse-header {\n",
+        "        background-color: #f8f9fa !important;\n",
+        "        border-radius: 8px !important;\n",
+        "        font-weight: bold !important;\n",
+        "        color: #1a73e8 !important;\n",
+        "        padding: 10px !important;\n",
+        "        margin-top: 5px !important;\n",
+        "    }\n",
+        "\n",
+        "    /* Hover effect for the headers */\n",
+        "    .p-Collapse-header:hover {\n",
+        "        background-color: #e8f0fe !important;\n",
+        "    }\n",
+        "\n",
+        "    /* Remove the default borders to let the cards shine */\n",
+        "    .p-Accordion {\n",
+        "        border: none !important;\n",
         "    }\n",
         "</style>\n",
         "\"\"\")\n",
         "\n",
         "\n",
-        "Country = \"Select country\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
+        "Country = \"AGO\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
         "# @markdown Choose the datasets to download in the optios below:\n",
         "\n",
         "# Create the widget\n",
@@ -602,25 +624,43 @@
         "           solar_checkbox, dem_checkbox, land_checkbox, ntl_checkbox, roads_checkbox]:\n",
         "    cb.observe(update_summary, names='value')\n",
         "\n",
-        "# Create a styled container for the whole form\n",
-        "main_form = VBox([\n",
-        "    all_checkbox, hr,\n",
-        "    specs_box, hr,\n",
-        "    pop_card, hr,\n",
-        "    mv_box, hr,\n",
-        "    wind_box, hr,\n",
-        "    solar_box, hr,\n",
-        "    dem_box, hr,\n",
-        "    land_box, hr,\n",
-        "    ntl_box, hr,\n",
-        "    roads_box,\n",
-        "    space,\n",
-        "    download,\n",
-        "    selection_summary,\n",
-        "    log_output\n",
-        "], layout=Layout(padding='20px', border='1px solid #e0e0e0', border_radius='20px'))\n",
+        "# Wrap each of your existing boxes\n",
+        "specs_card = specs_box.add_class('dataset-card')\n",
+        "pop_card = pop_box.add_class('dataset-card')\n",
+        "mv_card = mv_box.add_class('dataset-card')\n",
+        "wind_card = wind_box.add_class('dataset-card')\n",
+        "solar_card = solar_box.add_class('dataset-card')\n",
+        "dem_card = dem_box.add_class('dataset-card')\n",
+        "land_card = land_box.add_class('dataset-card')\n",
+        "ntl_card = ntl_box.add_class('dataset-card')\n",
+        "roads_card = roads_box.add_class('dataset-card')\n",
         "\n",
-        "display(font_style, main_form)"
+        "header_socio = widgets.HTML(\"<h2 class='category-header'>👤 Socio-Demographics</h2>\")\n",
+        "header_env = widgets.HTML(\"<h2 class='category-header'>🛰️ Environmental Layers</h2>\")\n",
+        "header_infra = widgets.HTML(\"<h2 class='category-header'>🔌 Infrastructure & Logistics</h2>\")\n",
+        "\n",
+        "# The Organized Interface\n",
+        "app_interface = VBox([\n",
+        "    all_checkbox,\n",
+        "\n",
+        "    header_socio,\n",
+        "    specs_card, pop_card,\n",
+        "\n",
+        "    header_env,\n",
+        "    dem_card, solar_card, wind_card, land_card,\n",
+        "\n",
+        "    header_infra,\n",
+        "    mv_card, ntl_card, roads_card,\n",
+        "\n",
+        "    space,\n",
+        "    widgets.HTML(\"<b>Console Output:</b>\"),\n",
+        "    log_output,\n",
+        "    HBox([download], layout=Layout(justify_content='center', padding='20px')),\n",
+        "    space\n",
+        "], layout=Layout(max_width='1050px', margin='0 auto'))\n",
+        "\n",
+        "# Final display\n",
+        "display(fa_loader, font_style, app_interface)"
       ],
       "metadata": {
         "id": "tjKveZd7QUAf",
