--- a/OnSSET_SDK.ipynb
+++ b/OnSSET_SDK.ipynb
@@ -116,6 +116,8 @@
         "# @markdown displayed of posible datasets to download. Select which datasets and sources\n",
         "# @markdown you want to use and click on the `Get data` button.\n",
         "\n",
+        "Country = \"BEN\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
+        "\n",
         "fa_loader = HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> ''')\n",
         "\n",
         "# FIX SCROLLBAR: This tells Colab to expand the output area\n",
@@ -202,12 +204,23 @@
         "    .p-Accordion {\n",
         "        border: none !important;\n",
         "    }\n",
+        "    /* Style for the \"Select All\" container */\n",
+        "    .select-all-container {\n",
+        "        background-color: #f1f3f4; /* Light grey NASA-style background */\n",
+        "        border: 2px dashed #dadce0;\n",
+        "        border-radius: 10px;\n",
+        "        padding: 10px 15px;\n",
+        "        margin-bottom: 20px;\n",
+        "    }\n",
+        "\n",
+        "    /* Make the text for Select All pop */\n",
+        "    .select-all-container .widget-label span {\n",
+        "        font-size: 17px !important;\n",
+        "        font-weight: 800 !important;\n",
+        "        color: #1a73e8 !important; /* Bold Blue */\n",
+        "    }\n",
         "</style>\n",
         "\"\"\")\n",
-        "\n",
-        "\n",
-        "Country = \"AGO\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
-        "# @markdown Choose the datasets to download in the optios below:\n",
         "\n",
         "# Create the widget\n",
         "log_output = widgets.Output(\n",
@@ -219,6 +232,8 @@
         "        margin='10px 0'\n",
         "    )\n",
         ")\n",
+        "\n",
+        "title = widgets.HTML('<h1>📂 Choose the datasets to download in the optios below</h1>')\n",
         "\n",
         "all_checkbox = widgets.Checkbox(\n",
         "    description='Select all', # Label\n",
@@ -625,6 +640,7 @@
         "    cb.observe(update_summary, names='value')\n",
         "\n",
         "# Wrap each of your existing boxes\n",
+        "all_checkbox_styled = VBox([all_checkbox]).add_class('select-all-container')\n",
         "specs_card = specs_box.add_class('dataset-card')\n",
         "pop_card = pop_box.add_class('dataset-card')\n",
         "mv_card = mv_box.add_class('dataset-card')\n",
@@ -636,12 +652,14 @@
         "roads_card = roads_box.add_class('dataset-card')\n",
         "\n",
         "header_socio = widgets.HTML(\"<h2 class='category-header'>👤 Socio-Demographics</h2>\")\n",
-        "header_env = widgets.HTML(\"<h2 class='category-header'>🛰️ Environmental Layers</h2>\")\n",
-        "header_infra = widgets.HTML(\"<h2 class='category-header'>🔌 Infrastructure & Logistics</h2>\")\n",
+        "header_env = widgets.HTML(\"<h2 class='category-header'>🛰️ Physical Environment</h2>\")\n",
+        "header_infra = widgets.HTML(\"<h2 class='category-header'>🏗️ Infrastructure</h2>\")\n",
         "\n",
         "# The Organized Interface\n",
         "app_interface = VBox([\n",
-        "    all_checkbox,\n",
+        "    title,\n",
+        "    space,\n",
+        "    all_checkbox_styled,\n",
         "\n",
         "    header_socio,\n",
         "    specs_card, pop_card,\n",
@@ -653,6 +671,7 @@
         "    mv_card, ntl_card, roads_card,\n",
         "\n",
         "    space,\n",
+        "    selection_summary,\n",
         "    widgets.HTML(\"<b>Console Output:</b>\"),\n",
         "    log_output,\n",
         "    HBox([download], layout=Layout(justify_content='center', padding='20px')),\n",
