--- a/OnSSET_SDK.ipynb
+++ b/OnSSET_SDK.ipynb
@@ -116,7 +116,7 @@
         "# @markdown displayed of posible datasets to download. Select which datasets and sources\n",
         "# @markdown you want to use and click on the `Get data` button.\n",
         "\n",
-        "Country = \"BEN\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
+        "Country = \"Select country\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
         "\n",
         "fa_loader = HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> ''')\n",
         "\n",
@@ -125,9 +125,13 @@
         "\n",
         "font_style = widgets.HTML(\"\"\"\n",
         "<style>\n",
+        "    /* Labels and Checkbox Text */\n",
+        "    .widget-label, .widget-checkbox > label > span {\n",
+        "        color: var(--colab-primary-text-color) !important;\n",
+        "    }\n",
         "    .widget-label {\n",
         "        font-size: 15px !important;\n",
-        "        color: #3c4043 !important;\n",
+        "\n",
         "    }\n",
         "    .widget-html {\n",
         "        font-size: 14px !important;\n",
@@ -140,13 +144,12 @@
         "    .widget-checkbox > label > span {\n",
         "        font-size: 16px !important;    /* Larger text */\n",
         "        font-weight: 600 !important;   /* Semi-bold */\n",
-        "        color: #202124 !important;     /* Google Dark Grey */\n",
         "        font-family: \"Segoe UI\", Tahoma, sans-serif !important;\n",
         "        padding-left: 5px;             /* Space between box and text */\n",
         "    }\n",
         "    /* Change color when the user hovers over the checkbox */\n",
         "    .widget-checkbox:hover {\n",
-        "        background-color: #f8f9fa;\n",
+        "        background-color: var(--colab-secondary-surface-color) !important;\n",
         "        border-radius: 4px;\n",
         "    }\n",
         "    /* MAKE THE SPINNER SPIN */\n",
@@ -164,8 +167,9 @@
         "    }\n",
         "    /* Card Container */\n",
         "    .dataset-card {\n",
-        "        background-color: #ffffff;\n",
-        "        border: 1px solid #dadce0;\n",
+        "        background-color: var(--colab-primary-surface-color) !important;\n",
+        "        border: 1px solid var(--colab-border-color) !important;\n",
+        "        color: var(--colab-primary-text-color) !important;\n",
         "        border-radius: 12px;\n",
         "        padding: 18px;\n",
         "        margin: 10px 0px;\n",
@@ -185,29 +189,16 @@
         "    .widget-checkbox > label > span { font-size: 16px !important; font-weight: 600 !important; }\n",
         "    .fa-spinner { animation: spin 2s linear infinite; }\n",
         "    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }\n",
-        "    /* Style the Accordion Header */\n",
-        "    .jupyter-widgets.p-Accordion-child > .p-Collapse-header {\n",
-        "        background-color: #f8f9fa !important;\n",
-        "        border-radius: 8px !important;\n",
-        "        font-weight: bold !important;\n",
-        "        color: #1a73e8 !important;\n",
-        "        padding: 10px !important;\n",
-        "        margin-top: 5px !important;\n",
-        "    }\n",
         "\n",
         "    /* Hover effect for the headers */\n",
         "    .p-Collapse-header:hover {\n",
         "        background-color: #e8f0fe !important;\n",
         "    }\n",
         "\n",
-        "    /* Remove the default borders to let the cards shine */\n",
-        "    .p-Accordion {\n",
-        "        border: none !important;\n",
-        "    }\n",
         "    /* Style for the \"Select All\" container */\n",
         "    .select-all-container {\n",
-        "        background-color: #f1f3f4; /* Light grey NASA-style background */\n",
-        "        border: 2px dashed #dadce0;\n",
+        "        background-color: var(--colab-secondary-surface-color) !important;\n",
+        "        border: 2px dashed var(--colab-border-color);\n",
         "        border-radius: 10px;\n",
         "        padding: 10px 15px;\n",
         "        margin-bottom: 20px;\n",
